# gradus-test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  env.example   pyproject.toml
docker/app/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
src/apps/health/: urls.py
src/apps/health/api/: views.py
src/apps/notifications/: admin.py  models.py  urls.py  validators.py
src/apps/notifications/api/: serializers.py  urls.py  views.py
src/apps/notifications/migrations/: 0001_initial.py  0002_add_default_notification_types.py
src/apps/notifications/services/: channels.py  senders.py
src/apps/users/migrations/: 0001_initial.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/config/components/: api.py  apps.py  boilerplate.py  database.py  email.py  logging.py  middleware.py
src/core/: middlewares.py  permissions.py
